--- a/package.json
+++ b/package.json
@@ -8,12 +8,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/styled": "^11.3.0",
+    "@headlessui/react": "^1.4.2",
+    "@heroicons/react": "^1.0.5",
+    "axios": "^0.23.0",
+    "framer-motion": "^4.1.17",
+    "millify": "^4.0.0",
     "next": "12.0.7",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-horizontal-scrolling-menu": "^2.3.2",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.0",
     "eslint": "8.4.1",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.2"
   }
 }
